import using npm workspace package and import using svelte alias

--- a/components/package.json
+++ b/components/package.json
@@ -1,6 +1,9 @@
 {
 	"name": "components",
 	"version": "0.0.1",
+	"exports": {
+		"./": "./src/lib/components/"
+	},
 	"scripts": {
 		"dev": "vite dev",
 		"build": "svelte-kit sync && svelte-package",
